delete put and validation
